# oh-my-claude

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
apps/menubar/: index.html  package.json  tailwind.config.js
apps/menubar/src-tauri/: Cargo.toml  tauri.conf.json
apps/menubar/src-tauri/src/: commands.rs  main.rs  proxy_client.rs  registry.rs  shell_env.rs  tray.rs  types.rs
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts
changelog/: v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.2.0.md  v1.2.1.md  v1.2.2-beta.0.md  v1.2.2-beta.1.md  v1.2.2-beta.2.md  v1.2.2-beta.3.md  v1.2.2-beta.4.md  v1.2.2-beta.5.md  v1.2.2-beta.6.md  v1.2.2-beta.7.md
docs/: CHANGELOG.md  README.md  README.zh-CN.md  RFC-Multi-AI-Bridge.md  changelog.md
docs/changelog/: v1.0.0.md  v1.0.x.md  v1.1.x.md  v1.2.x.md  v1.3.x.md  v1.4.x.md  v1.5.x.md  v1.x.md  v2.0.x.md  v2.1.3-beta.md  v2.1.x.md  v2.2.0.md  v2.2.1-beta.md  v2.2.1.md  v2.2.2.md  v2.2.3.md  v2.2.4.md  v2.2.5.md  v2.2.6.md  v2.2.7.md  v2.2.x.md
docs/diagrams/: multi-ai-architecture.drawio
docs/guides/: codex-app-server.md  coworker-gui-acceptance.md  coworker-protocol-coverage.md  coworker-smoke-tests.md  orchestrator-architecture.md
docs/research/: opencode-native-coworker.md
scripts/: aliyun-login.ts  copy-wasm.ts  kimi-login.ts  minimax-login.ts  prepare.cjs
src/: cli.ts  index.ts
src/agents/: analyst.ts  claude-reviewer.ts  claude-scout.ts  index.ts  (+14 more)
(+615 files in other folders)
